💻 Fix extra margin on resume pages

--- a/style.scss
+++ b/style.scss
@@ -32,7 +32,7 @@ dl {
 .hide { display: none; }
 
 %resume {
-	section {
+	section.entry-content {
 		border-top: 1px solid rgba(0, 0, 0, 0.1);
 		padding-top: 1em;
 	}
